various design improvements

--- a/templates/main.html
+++ b/templates/main.html
@@ -2,6 +2,9 @@
     <head>
         <title>{% block title %}Wer bin ich{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            .current_player_indicator { font-size: x-large; }
+        </style>
     </head>
     <body>
         {% block content %}{% endblock %}
